--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
@@ -10,17 +10,17 @@
 
 本节案例需实现导出一张具有两张表单的Excel表，第一张表单的名称为“学生总数”，标题字段为“总数”，第二张表单的名称为“学生信息”，标题字段为“学号”和“姓名”，如图8-1、8-2所示：
 
-![8-1](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/2.png)
+![image](https://user-images.githubusercontent.com/79617492/181188622-53759f85-4767-4749-a9e4-d77731bafe4a.png)
 
 ##### 图8-1 学生总数表单
 
-![8-2](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/3.png)
+![image](https://user-images.githubusercontent.com/79617492/181188636-4bf55a71-f96d-4488-8b77-7bc7bb47b722.png)
 
 ##### 图8-2 学生信息表单
 
 ##### 4.8.3 流程图展示
 
-![8-3](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/1.png)
+![image](https://user-images.githubusercontent.com/79617492/181188660-580ce865-f316-448a-a51f-2e45ad82599c.png)
 
 ##### 图8-3 流程图展示
 
@@ -42,29 +42,29 @@ f）利用数据导出Excel组件将Excel文件导出。
 
 a）数据库中准备好学生表的数据。
 
-b）利用接口生成器生成查询学生表相关的SQL语句，详情可参见[《SoFlu社区版快速入门教程第4.10节：如何自动生成SQL信息》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#410-%E5%A6%82%E4%BD%95%E8%87%AA%E5%8A%A8%E7%94%9F%E6%88%90sql%E4%BF%A1%E6%81%AF)。
+b）利用接口生成器生成查询学生表相关的SQL语句，详情可参见[《SoFlu（后端）全自动开发平台快速入门教程第4.10节：如何自动生成SQL信息》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#410-%E5%A6%82%E4%BD%95%E8%87%AA%E5%8A%A8%E7%94%9F%E6%88%90sql%E4%BF%A1%E6%81%AF)。
 
 ##### 4.8.4 操作步骤
 
 a）进入实体模型功能模块，新增一个实体模型。该实体模型作为需导出的两张表单的标题字段集合，用于之后流程图编辑中对标题字段进行赋值，具体配置如图8-4所示，其中oneTitle表示第一张表单的标题字段、twoTitle表示第二张表单的标题字段。
 
-![8-4](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/4.png)
+![image](https://user-images.githubusercontent.com/79617492/181188975-65143c31-2232-4d84-9c8d-13bede2f9b49.png)
 
 ##### 图8-4 实体模型配置
 
 b）进入接口管理功能模块，新增一个接口，填写接口的基本信息，HTTP方法选择“GET”，如图8-5所示：
 
-![8-5](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/5.png)
+![image](https://user-images.githubusercontent.com/79617492/181189864-f65cf6e9-a140-4253-8bc6-e58091a66c46.png)
 
 ##### 图8-5 填写接口基本信息
 
 c）该接口不需配置入口参数，直接进入模型编辑（即接口的流程图设计），注意关键的数据导出Excel组件，如图8-6、图8-7所示：
 
-![8-6](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/6.png)
+![image](https://user-images.githubusercontent.com/79617492/181189889-6eae73ec-4f9a-42a8-b87e-6e9193c8f8cf.png)
 
 ##### 图8-6 进入模型编辑
 
-![8-7](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/7.png)
+![image](https://user-images.githubusercontent.com/79617492/181189909-1d2d56f3-60d9-4d24-bce8-515871dc3ac4.png)
 
 ##### 图8-7 数据导出Excel组件
 
@@ -72,94 +72,94 @@ d）各组件的详细配置展示如下。
 
 d1）单SQL组件【查询学生总数】：用于查询学生表中学生记录的总数，故组件配置中SQL名称选择count_Xuesheng，其他信息可选填，如图8-8、图8-9所示：
 
-![8-8](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/8.png)
+![image](https://user-images.githubusercontent.com/79617492/181189937-195fb03b-dd92-436d-a9af-c05cfe12ce96.png)
 
 ##### 图8-8 查询学生总数组件
 
-![8-9](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/9.png)
+![image](https://user-images.githubusercontent.com/79617492/181189960-13319652-6b4a-4981-a09b-8bf79a343352.png)
 
 ##### 图8-9 填写数据
 
 d2）单SQL组件【查询学生信息】：用于查询学生表中的学生信息数据，故组件配置中SQL名称选择list_Xuesheng，其他信息可选填，如图8-10、图8-11所示：
 
-![8-10](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/11.png)
+![image](https://user-images.githubusercontent.com/79617492/181190002-1167ac08-aaec-4e81-93f0-bda28c00b7df.png)
 
 ##### 图8-10 查询学生信息组件
 
-![8-11](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/12.png)
+![image](https://user-images.githubusercontent.com/79617492/181191311-a1aed5e8-d185-4184-a2f5-961775bda659.png)
 
 ##### 图8-11 填写数据
 
-![8-12](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/10.png)
+![image](https://user-images.githubusercontent.com/79617492/181191353-75c428ca-fea5-4638-a773-6bd90064f86f.png)
 
 ##### 图8-12 SQL参数详情
 
-d3）赋值组件【标题赋值】：用于为需导出Excel文件中两张表单的标题字段进行赋值，其中实体模型选择TitleList，再根据表单的实际情况进行赋值，如图8-12、图8-13所示：
+d3）赋值组件【标题赋值】：用于为需导出Excel文件中两张表单的标题字段进行赋值，其中实体模型选择TitleList，再根据表单的实际情况进行赋值，如图8-13、图8-14所示：
 
-![8-12](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/14.png)
+![image](https://user-images.githubusercontent.com/79617492/181192464-5749a25a-b56e-4220-b03d-4b3a59b05a21.png)
 
-##### 图8-12 标题赋值组件
+##### 图8-13 标题赋值组件
 
-![8-13](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/15.png)
+![image](https://user-images.githubusercontent.com/79617492/181192489-d74614bf-8d11-4db5-9d3b-1d3426cd049c.png)
 
-##### 图8-13 表格选择
+##### 图8-14 表格选择
 
-![8-14](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/16.png)
+![image](https://user-images.githubusercontent.com/79617492/181192522-fd78c2ba-8b36-4329-ba7d-c977618f7725.png)
 
-##### 图8-14 填写模型数据
+##### 图8-15 填写模型数据
 
-d4）单函数【学生count类型转换】：用于将单SQL组件【查询学生总数】 查询出的List< Map>类型数据转换为List< String>类型数据，以便在数据导出Excel组件【导出Excel文件学生信息】 中使用。用到的函数是mapToList(List list,String[] keys)，传入的参数值如图8-15、图8-16所示：
+d4）单函数【学生count类型转换】：用于将单SQL组件【查询学生总数】 查询出的List< Map>类型数据转换为List< String>类型数据，以便在数据导出Excel组件【导出Excel文件学生信息】 中使用。用到的函数是mapToList(List list,String[] keys)，传入的参数值如图8-16、图8-17所示：
 
-![8-15](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/17.png)
+![image](https://user-images.githubusercontent.com/79617492/181192563-efc08d5a-1023-48c2-b2d3-26e5bfe09d3d.png)
 
-##### 图8-15 学生count类型转换组件
+##### 图8-16 学生count类型转换组件
 
-![8-16](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/18.png)
+![image](https://user-images.githubusercontent.com/79617492/181192585-9d15f01e-cde4-4432-aec8-c47107ea9fd1.png)
 
-##### 图8-16 填写数据
+##### 图8-17 填写数据
 
-d5）单函数【学生信息类型转换】：用于将单SQL组件【查询学生信息】 查询出的List< Map>类型数据转换为List< String>类型数据，以便在数据导出Excel组件【导出Excel文件学生信息】 中使用。用到的函数是mapToList(List list,String[] keys)，传入的参数值如图8-17、图8-18所示：
+d5）单函数【学生信息类型转换】：用于将单SQL组件【查询学生信息】 查询出的List< Map>类型数据转换为List< String>类型数据，以便在数据导出Excel组件【导出Excel文件学生信息】 中使用。用到的函数是mapToList(List list,String[] keys)，传入的参数值如图8-18、图8-19所示：
 
-![8-17](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/19.png)
+![image](https://user-images.githubusercontent.com/79617492/181193400-83d71563-1957-4fce-ae14-03457d2f67b4.png)
 
-##### 图8-17 学生信息类型转换组件
+##### 图8-18 学生信息类型转换组件
 
-![8-18](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/20.png)
+![image](https://user-images.githubusercontent.com/79617492/181193439-37b9969d-c38e-46d8-b1c5-5b6358a8ad04.png)
 
-##### 图8-18 填写数据
+##### 图8-19 填写数据
 
-d6）数据导出Excel组件【导出Excel文件学生信息】：用于引用以上组件的执行结果，将Excel文件导出，Excel文件名称及Excel文件中各表单的表单页、表单名根据实际情况进行填写，如图8-19、图8-20所示：
+d6）数据导出Excel组件【导出Excel文件学生信息】：用于引用以上组件的执行结果，将Excel文件导出，Excel文件名称及Excel文件中各表单的表单页、表单名根据实际情况进行填写，如图8-20、图8-21所示：
 
-![8-19](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/21.png)
+![image](https://user-images.githubusercontent.com/79617492/181193469-afee5a55-bf6c-4c84-9e81-f8ff3c7bcdf3.png)
 
-##### 图8-19 导出Excel文件学生信息组件
+##### 图8-20 导出Excel文件学生信息组件
 
-![8-20](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/22.png)
+![image](https://user-images.githubusercontent.com/79617492/181193490-c606060f-9bf4-46ca-9d37-1a6fbc6c0422.png)
 
-##### 图8-20 填写数据
+##### 图8-21 填写数据
 
 e）接口的流程图设计完成之后，保存并退出。
 
 f）提交并发布接口。
 
-g）进入接口文档功能模块，进行接口的调试查看接口功能是否正常，如图8-21所示：
+g）进入接口文档功能模块，进行接口的调试查看接口功能是否正常，如图8-22所示：
 
-![8-21](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/23.png)
+![image](https://user-images.githubusercontent.com/79617492/181193511-414f4ad2-785d-4e7a-9a48-8013677c5efa.png)
 
-##### 图8-21 接口文档
+##### 图8-22 接口文档
 
-h）选择对应的接口，选择调试页签，如图8-22所示：
+h）选择对应的接口，选择调试页签，如图8-23所示：
 
-![8-22](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/24.png)
+![image](https://user-images.githubusercontent.com/79617492/181193537-a1c7b195-1dc8-42da-be97-379839a1a382.png)
 
-##### 图8-22 选择调试页签
+##### 图8-23 选择调试页签
 
-i）单击发送即可进行接口的调试，可以看到需导出的文件在页面下方显示，说明接口功能正常，如图8-23、图8-24所示：
+i）单击发送即可进行接口的调试，可以看到需导出的文件在页面下方显示，说明接口功能正常，如图8-24、图8-25所示：
 
-![8-23](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/25.png)
+![image](https://user-images.githubusercontent.com/79617492/181193603-054aeb1c-f9ec-433f-a4d2-361ddbe5075d.png)
 
-##### 图8-23 点击发送
+##### 图8-24 点击发送
 
-![8-24](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/26.png)
+![image](https://user-images.githubusercontent.com/79617492/181193633-ce63017e-c8bc-4718-ab3f-e60ad6bb6dfb.png)
 
-##### 图8-24 接口功能正常
+##### 图8-25 接口功能正常
