--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/5. 条件组件/3. 并行条件组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/5. 条件组件/3. 并行条件组件的使用.md
@@ -14,51 +14,51 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 5.3.3 操作步骤
 
-a）进入流程编辑页面，在窗体视图左侧的“组件列表”中，找到并行条件组件，拖拽至绘图面板，如图1-1所示：
+a）进入流程编辑页面，在窗体视图左侧的“组件列表”中，找到并行条件组件，拖拽至绘图面板，如图3-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_1.png)
+![image](https://user-images.githubusercontent.com/79617492/181214237-3f75aa04-3d70-41de-aa21-24cba8adc80b.png)
 
-##### 图1-1 找到并行条件组件
+##### 图3-1 找到并行条件组件
 
-b）选中并行条件组件，填写组件的基本信息，如图1-2所示：
+b）选中并行条件组件，填写组件的基本信息，如图3-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_2.png)
+![image](https://user-images.githubusercontent.com/79617492/181214269-14ef64e4-b25f-4ac3-8871-87c788a29be4.png)
 
-##### 图1-2 填写组件的基本信息
+##### 图3-2 填写组件的基本信息
 
-c）同时选择三个“单函数”组件、一个“输出结果”组件以及一个“包容性条件”组件，拖拽至绘图面板，连接好组件的流程图，如图1-3所示：
+c）同时选择三个“单函数”组件、一个“输出结果”组件以及一个“包容性条件”组件，拖拽至绘图面板，连接好组件的流程图，如图3-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_3.png)
+![image](https://user-images.githubusercontent.com/79617492/181214300-a4717518-b7d4-4cfa-91a9-1add4d427c33.png)
 
-##### 图1-3 连接组件流程图
+##### 图3-3 连接组件流程图
 
 ##### 说明：并行条件组件不需要设置流程变量，连接并行条件组件的每个流程分支都是必走的，类似于多线程，其中每个流程分支走完需要合并流程，这时可以使用一个包容性条件组件将流程重新合并在一个流程中以便继续执行接下来的流程。
 
-d）选中一个“单函数”组件，根据项目需求填写单函数的名称和描述，如图1-4所示：
+d）选中一个“单函数”组件，根据项目需求填写单函数的名称和描述，如图3-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_4.png)
+![image](https://user-images.githubusercontent.com/79617492/181214329-94e73be9-b961-42ec-9a6e-daeef4ab8e90.png)
 
-##### 图1-4 选中一个单函数
+##### 图3-4 选中一个单函数
 
-e）单击“函数信息”处未选中记录方框，进入“填写数据”页面，如图1-5所示：
+e）单击“函数信息”处未选中记录方框，进入“填写数据”页面，如图3-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_5.png)
+![image](https://user-images.githubusercontent.com/79617492/181214359-4cb37fe4-e66d-4713-8fda-d23103c58e1a.png)
 
-##### 图1-5 进入填写数据页面
+##### 图3-5 进入填写数据页面
 
-f）选择函数类别、函数类路径和函数名称，也可根据项目需要设置参数信息，如图1-6所示：
+f）选择函数类别、函数类路径和函数名称，也可根据项目需要设置参数信息，如图3-6所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_6.png)
+![image](https://user-images.githubusercontent.com/79617492/181214397-69d9ba5d-4707-4af4-8136-ab20a19090c7.png)
 
-##### 图1-6 设置函数信息
+##### 图3-6 设置函数信息
 
 g）函数信息设置完成后，单击“确定”即可。
 
-h）同理设置另外两个“单函数”组件，如图1-7所示：
+h）同理设置另外两个“单函数”组件，如图3-7所示：
 
-![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_7.png)
+![image](https://user-images.githubusercontent.com/79617492/181214425-9fd77492-5e58-4a73-b99e-daaa23276b27.png)
 
-##### 图1-7 设置单函数组件
+##### 图3-7 设置单函数组件
 
 i）流程图编辑完成后，单击“保存并退出”。
 
