--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/8. 脚本语言组件/1. 第三方脚本组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/8. 脚本语言组件/1. 第三方脚本组件的使用.md
@@ -12,43 +12,43 @@ a）您需要拥有“接口管理”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
-C）使用第三方脚本组件之前，您需要提前创建好第三方脚本信息，创建方式见《SoFlu社区版基础操作指南[第17.1节](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/17.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/1.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC.md#11-%E6%96%B0%E5%A2%9E%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC%E6%A8%A1%E5%9D%97)和[第17.2节](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/17.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/1.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC.md#12-%E6%96%B0%E5%A2%9Epython%E8%84%9A%E6%9C%AC)》。
+C）使用第三方脚本组件之前，您需要提前创建好第三方脚本信息，创建方式见《[SoFlu（后端）基础操作指南第17.1节：第三方脚本](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/17.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/1.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC.md#1-%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC)》。
 
 ##### 8.1.3 操作步骤
 
 a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“脚本语言”栏目下，找到第三方脚本组件，拖拽至绘图面板，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_1.png)
+![image](https://user-images.githubusercontent.com/79617492/181435113-44c05a64-915c-43b2-a8ca-0bc3964cab5e.png)
 
 ##### 图1-1 找到第三方脚本组件
 
 b）同时拖拽一个输出结果组件，连接好组件的流程图，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_1.png)
+![image](https://user-images.githubusercontent.com/79617492/181435135-2ddd1b31-8776-4527-b676-6440a7da6353.png)
 
 ##### 图1-2 连接组件流程图
 
 c）选中第三方脚本组件，根据项目需求填写组件的名称和描述（也可不用填写），如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_3.png)
+![image](https://user-images.githubusercontent.com/79617492/181435150-b1972b1a-b4e7-4e6f-a3bf-feedc23fe3d9.png)
 
 ##### 图1-3 填写组件的基本信息
 
 d）单击“第三方脚本执行信息”处的未选中记录方框，进入填写数据页面，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_4.png)
+![image](https://user-images.githubusercontent.com/79617492/181435169-3e875677-4222-4ddf-8a2d-6c401d298faf.png)
 
 ##### 图1-4 单击未选中记录方框
 
 e）在填写数据页面，单击“脚本ID”处的选择记录方框，进入表格选择页面，如图1-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_5.png)
+![image](https://user-images.githubusercontent.com/79617492/181435197-6a985fff-08c0-4ff3-bcef-78877e200b10.png)
 
 ##### 图1-5 配置第三方脚本执行信息
 
 f）在表格选择页面，双击选择您需要使用的脚本信息的脚本ID，如图1-6所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_6.png)
+![image](https://user-images.githubusercontent.com/79617492/181435219-71385f07-e408-4f61-acd5-24f95b7602b1.png)
 
 ##### 图1-6 选择脚本ID
 
@@ -58,25 +58,25 @@ g）配置完成后，单击“确定”退出填写数据页面。
 
 h）选中输出结果组件，单击“响应结果”处的三等号按钮，双击选择一个响应结果，如图1-7所示：
 
-![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_9.png)
+![image](https://user-images.githubusercontent.com/79617492/181435240-5170258c-c1ae-4d71-bacf-d275f8602688.png)
 
 ##### 图1-7 选择响应结果
 
 i）单击“输出项值”处的未选中记录方框，进入填写数据页面，如图1-8所示：
 
-![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_7.png)
+![image](https://user-images.githubusercontent.com/79617492/181435305-57acff6b-cce9-4e4c-af81-a2c0381062b9.png)
 
 ##### 图1-8 单击未选中记录方框
 
 j）在填写数据页面，单击字段值处的参数选择按钮，进入参数选择页面，如图1-9所示：
 
-![1-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_10.png)
+![image](https://user-images.githubusercontent.com/79617492/181435319-ad849022-a43b-47ed-a3ef-e988cccf33c1.png)
 
 ##### 图1-9 单击参数选择按钮
 
 k）在参数选择页面，选择“第三方脚本组件”页签，双击选择第三方脚本组件的执行结果scriptThirdExecuteResult，如图1-10所示：
 
-![1-10](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_8.png)
+![image](https://user-images.githubusercontent.com/79617492/181435342-90bff825-139e-43cf-b5e3-847bc100319d.png)
 
 ##### 图1-10 引用第三方脚本组件的执行结果
 
