--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/9. 通信组件/2. HTTP组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/9. 通信组件/2. HTTP组件的使用.md
@@ -12,37 +12,37 @@ a）您需要拥有“接口管理”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
-c）您需要提前创建好HTTP通信资源实例，创建方式见[《SoFlu社区版基础操作指南第10.1.9节：新增Http通信资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md#19-%E6%96%B0%E5%A2%9Ehttp%E9%80%9A%E4%BF%A1%E8%B5%84%E6%BA%90)。
+c）您需要提前创建好HTTP通信资源实例，创建方式见[《SoFlu（后端）全自动开发平台教程基础操作指南第10.1.9节：新增Http通信资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md#19-%E6%96%B0%E5%A2%9Ehttp%E9%80%9A%E4%BF%A1%E8%B5%84%E6%BA%90)。
 
 ##### 9.2.3 操作步骤
 
 a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“通信”栏目下，找到HTTP组件，拖拽至绘图面板，如图2-1所示：
 
-![2-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_1_1.png)
+![image](https://user-images.githubusercontent.com/79617492/181436642-53812675-e994-46e1-8985-842be30a1110.png)
 
 ##### 图2-1 找到HTTP组件
 
 b）同时拖拽一个输出结果组件，连接好组件的流程图，如图2-2所示：
 
-![2-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_1_2.png)
+![image](https://user-images.githubusercontent.com/79617492/181436663-ba1c1a22-91ca-4f54-b6ac-a26484e0b7e7.png)
 
 ##### 图2-2 连接组件流程图
 
 C）选中HTTP组件，根据项目需求填写组件的名称和描述，如图2-3所示：
 
-![2-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_1_3.png)
+![image](https://user-images.githubusercontent.com/79617492/181436680-59f75a67-67af-4d4c-850a-4957bbc1d6e7.png)
 
 ##### 图2-3 填写组件的基本信息
 
 d）单击“http请求参数”处未选中记录方框，如图2-4所示：
 
-![2-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_1_4.png)
+![image](https://user-images.githubusercontent.com/79617492/181436713-c7e92189-7957-4859-9238-e165e4e4e7ca.png)
 
 ##### 图2-4 单击“http请求参数”
 
 e）根据接口实际需求，配置http请求参数，如图2-5所示：
 
-![2-5](https://www.feisuanyz.com/fsimage/zc-image/zjsy/downfile_1.png)
+![image](https://user-images.githubusercontent.com/79617492/181436751-108f0e94-38b5-444c-8822-98d097eedba9.png)
 
 ##### 图2-5 配置http请求参数
 
@@ -56,25 +56,25 @@ e3）返回文件流选项用于设置是否需要通过请求地址直接下载
 
 f）选中输出结果组件，单击“响应结果”处的三等号按钮，双击选择一个响应结果，如图2-6所示：
 
-![2-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_1_9.png)
+![image](https://user-images.githubusercontent.com/79617492/181436791-441229ab-cc97-463b-a0ae-76d4c9ed70e2.png)
 
 ##### 图2-6 配置响应结果
 
 g）单击“输出项值”处的未选中记录方框，进入填写数据页面，如图2-7所示：
 
-![2-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_1_10.png)
+![image](https://user-images.githubusercontent.com/79617492/181436806-eea05fd3-28cc-44a9-8eaf-d1ad29ab0ac7.png)
 
 ##### 图2-7 配置输出项值
 
 h）在填写数据页面，单击字段值处的参数选择按钮，进入参数选择页面，如图2-8所示：
 
-![2-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_1_11.png)
+![image](https://user-images.githubusercontent.com/79617492/181436819-76850a12-70d1-4b77-a683-7aae7471da5b.png)
 
 ##### 图2-8 配置字段值
 
 i）在参数选择页面，选择“HTTP组件”页签，双击选择组件的响应消息体responseEntity，如图2-9所示：
 
-![2-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_1_12.png)
+![image](https://user-images.githubusercontent.com/79617492/181436841-0a3021cc-76db-464f-a27a-0a66eca9b23a.png)
 
 ##### 图2-9 引用组件的响应消息体
 
