--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/9. 通信组件/3. TCP协议客户端组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/9. 通信组件/3. TCP协议客户端组件的使用.md
@@ -10,7 +10,7 @@
 
 a）进入全自动开发平台项目加载项页面，选择“组件 > 通信”，添加“TCP协议客户端组件”，单击“加载应用”即可，如图3-1所示：
 
-![3-1](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_12.png)
+![image](https://user-images.githubusercontent.com/79617492/181437043-b5cb20f6-57f4-4538-8bb6-7a1e3683b374.png)
 
 ##### 图3-1 项目加载项页面
 
@@ -18,19 +18,19 @@ b）进入接口管理/TCP模块管理页面，创建一个接口，根据实际
 
 c）单击“进入模型编辑”，进行接口的流程图设计，如图3-2所示：
 
-![3-2](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_13.png)
+![image](https://user-images.githubusercontent.com/79617492/181437072-4eb111f1-1df2-44fc-8662-6f26f5894544.png)
 
 ##### 图3-2 进入模型编辑
 
 d）在窗格视图组件列表，找到“TCP协议客户端组件”，拖拽至画布，并根据实际需求绘制接口流程图，如图3-3所示：
 
-![3-3](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_14.png)
+![image](https://user-images.githubusercontent.com/79617492/181437102-aef1efd5-d989-44a1-ab59-82a5b9d8609b.png)
 
 ##### 图3-3 窗格视图
 
 e）配置TCP协议客户端组件：选中TCP协议客户端组件，在页面右侧进行组件的具体配置，如图3-4所示：
 
-![3-4](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_15.png)
+![image](https://user-images.githubusercontent.com/79617492/181437140-36d93659-ca71-4c79-94b4-b4d6fdad98d0.png)
 
 ##### 图3-4 配置TCP协议客户端组件
 
@@ -44,24 +44,24 @@ f2）需保证对应的端口号TCP服务为上线状态，否则将无法调用
 
 g）提交并发布接口，如图3-5所示：
 
-![3-5](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_16.png)
+![image](https://user-images.githubusercontent.com/79617492/181437157-856a304d-d95d-4fd9-98b2-e9d2b9263c0d.png)
 
 ##### 图3-5 发布接口
 
 h）对接口进行测试用例，如图3-6所示：
 
-![3-6](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_17.png)
+![image](https://user-images.githubusercontent.com/79617492/181437181-f4f61359-a522-4785-8d81-6140635dcfef.png)
 
 ##### 图3-6 使用测试用例
 
 i）勾选测试用例，单击“执行”即可。如图3-7所示：
 
-![3-7](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_18.png)
+![image](https://user-images.githubusercontent.com/79617492/181437202-970b2927-3336-4f9f-b86e-59602e3dc384.png)
 
 ##### 图3-7 单击执行
 
 j）查看测试用例结果，如图3-8所示：
 
-![3-8](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_19.png)
+![image](https://user-images.githubusercontent.com/79617492/181437214-19219dab-c868-4014-b3df-3b61ca7873f8.png)
 
 ##### 图3-8 查看测试用例结果
