--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
@@ -12,7 +12,7 @@
 
 案例主要是通过服务端主动向客户端推送计数变量值，实现一个倒计时的效果，如下图所示：
 
-![4-1](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_8.png)
+![image](https://user-images.githubusercontent.com/79617492/181437351-c9fb10cd-f3b2-4701-903f-f00d782911ef.png)
 
 ##### 图4-1 倒计时效果
 
@@ -20,7 +20,7 @@
 
 案例主要是通过服务端主动向客户端推送计数变量值，实现一个倒计时的效果，如下图所示：
 
-![4-2](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_7.png)
+![image](https://user-images.githubusercontent.com/79617492/181437367-b6ebbfd6-5089-4d13-bac6-a0f5dd0df356.png)
 
 ##### 图4-2 流程图展示
 
@@ -28,25 +28,25 @@
 
 a）为项目添加客户端通信组件加载项，如图4-3所示：
 
-![4-3](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_1.png)
+![image](https://user-images.githubusercontent.com/79617492/181437391-a6d1b012-c068-4bc4-812e-8667469fc190.png)
 
 ##### 图4-3 添加客户端通信组件加载项
 
 b）新增一个接口，接口协议选择WebSocket，如图4-4所示：
 
-![4-4](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_2.png)
+![image](https://user-images.githubusercontent.com/79617492/181437419-cf60cacb-4ac1-4330-8156-2f4af00f271d.png)
 
 ##### 图4-4 新增接口
 
 c）配置接口的入口参数，本实例需要添加计数变量a，如图4-5所示：
 
-![4-5](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_9.png)
+![image](https://user-images.githubusercontent.com/79617492/181437438-db56695b-83a4-4259-90a3-70d09f23c02f.png)
 
 ##### 图4-5 添加计数变量
 
 d）通过拖、拽、拉的方式进行模型编辑（即流程图编辑），需注意关键的组件客户端通信组件，如图4-6所示：
 
-![4-6](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_10.png)
+![image](https://user-images.githubusercontent.com/79617492/181437452-b8f3ddbb-d3a9-47d1-96da-b2d01e6c7f10.png)
 
 ##### 图4-6 进行模型编辑
 
@@ -54,96 +54,96 @@ e）接下来将对组件的具体配置进行展示。
 
 e1）计数器组件【录入计数变量、实现逐次递减】：用于引用计数变量，并实现计数变量的逐次递减。计数器组件的循环流程变量选择入口参数计数变量a，操作符选择递减，如图4-7、图4-8所示：
 
-![4-8](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_11.png)
+![image](https://user-images.githubusercontent.com/79617492/181437462-67702e92-4d54-4734-8637-820e4851b5d6.png)
 
-##### 图4-8 计数器组件
+##### 图4-7 计数器组件
 
-![4-9](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_13.png)
+![image](https://user-images.githubusercontent.com/79617492/181437493-7d574ba1-a921-4fbc-916d-3fcf603b0108.png)
 
-##### 图4-9 选择入口参数计数变量a
+##### 图4-8 选择入口参数计数变量a
 
 e2）互斥条件组件【判断计数变量是否大于0】：用于判断计数变量的值是否大于0，若大于0，则通过客户端通信组件主动推送计数变量的值，若小于等于0，则结束程序，两条顺序流的流转条件的设置如图所示：
 
-![4-10](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_15.png)
+![image](https://user-images.githubusercontent.com/79617492/181437530-c9b5f80e-8355-4f1f-ac4e-3e86f54e2af9.png)
 
-##### 图4-10 互斥条件组件
+##### 图4-9 互斥条件组件
 
-![4-11](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_16.png)
+![image](https://user-images.githubusercontent.com/79617492/181437549-b6ff663d-c75d-4dfb-824a-5036135af7c6.png)
 
-##### 图4-11 顺序流1
+##### 图4-10 顺序流1
 
-![4-12](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_17.png)
+![image](https://user-images.githubusercontent.com/79617492/181437574-1dd7ecf9-ad6e-432b-904d-03119ffa34ff.png)
 
-##### 图4-12 参数选择
+##### 图4-11 参数选择
 
-![4-13](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_18.png)
+![image](https://user-images.githubusercontent.com/79617492/181437595-97a0821a-417b-478e-a253-4bccb483c5f2.png)
 
-##### 图4-13 流转条件1
+##### 图4-12 流转条件1
 
-![4-14](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_26.png)
+![image](https://user-images.githubusercontent.com/79617492/181437625-36a5d2b9-0573-4b21-af19-94462355b221.png)
 
-##### 图4-14 顺序流1
+##### 图4-13 顺序流1
 
-![4-15](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_27.png)
+![image](https://user-images.githubusercontent.com/79617492/181437642-d5c573de-00ce-43bf-aa5f-f62d6587212e.png)
 
-##### 图4-15 流转条件2
+##### 图4-14 流转条件2
 
 e3）输出结果组件：用于到计数变量的值小于等于0时，结束程序，将最终结果输出：
 
-![4-16](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_28.png)
+![image](https://user-images.githubusercontent.com/79617492/181437660-f464192d-e2f6-4ab2-8064-1c70a5cb1103.png)
 
-##### 图4-16 输出结果组件
+##### 图4-15 输出结果组件
 
-![4-17](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_29.png)
+![image](https://user-images.githubusercontent.com/79617492/181437682-9cbe8bb9-8952-4644-94a6-d7f530ac9df8.png)
 
-##### 图4-17 填写数据
+##### 图4-16 填写数据
 
 e4）单函数组件【休眠：制造等待时间】：用于程序在进行倒计时时，制造倒计时的间隔时间，用到的函数是休眠函数sleep(long arg0)，需传入休眠时间，具体配置如图所示：
 
-![4-18](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_19.png)
+![image](https://user-images.githubusercontent.com/79617492/181437744-c02a0895-a4fb-4fcf-ad0e-83fbf75174e4.png)
 
-##### 图4-18 单函数组件
+##### 图4-17 单函数组件
 
-![4-19](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_20.png)
+![image](https://user-images.githubusercontent.com/79617492/181437761-cc67d1ed-0bf6-48dc-9d5c-cf67253b110b.png)
 
-##### 图4-19 填写数据
+##### 图4-18 填写数据
 
 e5）客户端通信组件【建立连接、主动推送数据】：用于与websocket服务端建立连接，并主动推送计数器变量的数据给客户端。客户端通信组件的具体配置如下图所示：
 
-![4-20](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_21.png)
+![image](https://user-images.githubusercontent.com/79617492/181437790-5b378979-53eb-4117-8bd5-90d16d734aa9.png)
 
-##### 图4-20 客户端通信组件
+##### 图4-19 客户端通信组件
 
-![4-21](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_23.png)
+![image](https://user-images.githubusercontent.com/79617492/181437812-27aa77c9-80f0-4505-b164-261ba9fb4c37.png)
 
-##### 图4-21 配置接口参数
+##### 图4-20 配置接口参数
 
-![4-22](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_25.png)
+![image](https://user-images.githubusercontent.com/79617492/181437843-21cc5d3b-3eb0-4f76-85ee-40fcb00442a8.png)
 
-##### 图4-22 录入计数变量
+##### 图4-21 录入计数变量
 
 f）完成流程图编辑之后，保存并退出。
 
 g）提交并发布接口。
 
-h）编辑测试用例，录入计数变量的值，如图4-23所示：
+h）编辑测试用例，录入计数变量的值，如图4-22所示：
 
-![4-23](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_31.png)
+![image](https://user-images.githubusercontent.com/79617492/181437899-8c556e71-804b-4b0f-8a2b-74947e0aefde.png)
 
-##### 图4-23 编辑测试用例
+##### 图4-22 编辑测试用例
 
-i）执行测试用例，查看测试用例的结果，可以看到响应内容为计数变量的值，如图4-24所示：
+i）执行测试用例，查看测试用例的结果，可以看到响应内容为计数变量的值，如图4-23所示：
 
-![4-24](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_32.png)
+![image](https://user-images.githubusercontent.com/79617492/181437918-05026303-fbc0-4b4e-9a45-ea42982c07dd.png)
 
-##### 图4-24 查看测试用例结果
+##### 图4-23 查看测试用例结果
 
-j）与前端做好联调后，启动前端程序，查看效果，如图4-25所示：
+j）与前端做好联调后，启动前端程序，查看效果，如图4-24所示：
 
-![4-25](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_8.png)
+![image](https://user-images.githubusercontent.com/79617492/181437939-e8a3fe91-0d77-43e6-b6bd-36c314bb0892.png)
 
-##### 图4-25 查看效果1
+##### 图4-24 查看效果1
 
-![4-26](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_30.png)
+![image](https://user-images.githubusercontent.com/79617492/181437956-fc668e6d-1d28-4f60-864e-f35d12a2fc46.png)
 
-##### 图4-26 查看效果2
+##### 图4-25 查看效果2
