--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/9. 通信组件/5. 请求响应参数管理组件的使用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）组件使用案例/9. 通信组件/5. 请求响应参数管理组件的使用.md
@@ -16,31 +16,31 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“通信”栏目下，找到请求响应参数管理组件，拖至窗体视图，如图5-1所示：
 
-![5-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_2_1.png)
+![image](https://user-images.githubusercontent.com/79617492/181438087-2973b63c-792a-4405-929b-5078424f5085.png)
 
 ##### 图5-1 找到请求响应参数管理组件
 
 b）连接好组件的流程图，选中请求响应参数管理组件，根据项目需求填写组件的名称和描述，如图5-2所示：
 
-![5-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_2_3.png)
+![image](https://user-images.githubusercontent.com/79617492/181438102-5cb19a0a-638d-4fcf-8ecc-17d7115ba264.png)
 
 ##### 图5-2 填写基本信息
 
 c）选择参数类型，参数类型分为请求参数和响应参数，如图5-3所示：
 
-![5-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_2_4.png)
+![image](https://user-images.githubusercontent.com/79617492/181438114-31435edd-aff8-4c5b-a77a-12b31302836f.png)
 
 ##### 图5-3 选择参数类型
 
 d）单击选择记录方框，根据实际项目需求选择执行方法，如图5-4所示：
 
-![5-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_2_5.png)
+![image](https://user-images.githubusercontent.com/79617492/181438138-b8c10ae8-06df-47d7-a609-5165363f195a.png)
 
 ##### 图5-4 选择执行方法
 
 e）配置执行方法参数，若执行方法不需要参数也可以不用配置，如图5-5所示：
 
-![5-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_2_6.png)
+![image](https://user-images.githubusercontent.com/79617492/181438154-6200df6f-2600-46f4-8cb9-a39a2c5e4028.png)
 
 ##### 图5-5 配置执行方法参数
 
@@ -54,7 +54,7 @@ i）单击参数选择按钮，给data字段配置字段值。
 
 j）进入参数选择页面，选择“请求响应参数管理组件”页签，双击选择“executeMethodResult”引用组件的执行结果，如图5-6所示：
 
-![5-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_2_7.png)
+![image](https://user-images.githubusercontent.com/79617492/181438169-a3bc736a-8e2a-4bff-a8aa-7fb30de2c1b7.png)
 
 ##### 图5-6 选择执行结果
 
