--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）高阶专题/4. 自定义插件.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）高阶专题/4. 自定义插件.md
@@ -40,4 +40,4 @@ demo-plugin-1.0.0.pom
 
 c）将生成的` demo-plugin-1.0.0.jar `和` demo-plugin-1.0.0.pom `压缩成一个zip包上传到平台即可。
 
-##### 说明：如何导入自定义插件，请参见[《SoFlu社区版基础操作指南第3.1.1节：导入插件》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%8F%92%E4%BB%B6%E4%B8%AD%E5%BF%83/%E6%8F%92%E4%BB%B6%E4%B8%AD%E5%BF%83.md#11-%E5%AF%BC%E5%85%A5%E6%8F%92%E4%BB%B6)详细操作步骤。
+##### 说明：如何导入自定义插件，请参见[《SoFlu（后端）全自动开发平台教程基础操作指南第3.1.1节：导入插件》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%8F%92%E4%BB%B6%E4%B8%AD%E5%BF%83/1.%20%E6%8F%92%E4%BB%B6%E4%B8%AD%E5%BF%83.md)详细操作步骤。
