--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）高阶专题/5. 自定义组件.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）高阶专题/5. 自定义组件.md
@@ -12,7 +12,7 @@ a）组件Demo工程包下载地址：demo-component.zip
 
 b）下载开发辅助工具：在全自动开发平台中，单击右上角下载开发辅助工具，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/gj-image/gj_0000_img.png)
+![image](https://user-images.githubusercontent.com/79617492/181440047-8da3baf5-67cd-4585-9615-dcfa53de8f6e.png)
 
 ##### 图1-1 下载开发辅助工具
 
@@ -196,4 +196,4 @@ demo-component-1.0.0.pom
 
 g）将生成的` demo-component-1.0.0.jar `和` demo-component-1.0.0.pom `压缩成一个zip包上传到平台即可。
 
-##### 说明：如何导入自定义组件，请参见[《SoFlu社区版基础操作指南第2.1.1节：导入组件》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86/%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86.md#11-%E5%AF%BC%E5%85%A5%E7%BB%84%E4%BB%B6)详细操作步骤。
+##### 说明：如何导入自定义组件，请参见[《SoFlu（后端）全自动开发平台教程基础操作指南第2.1.1节：导入组件》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86/1.%20%E7%BB%84%E4%BB%B6%E7%AE%A1%E7%90%86.md#11-%E5%AF%BC%E5%85%A5%E7%BB%84%E4%BB%B6)详细操作步骤。
