--- a/SoFlu（后端）全自动开发平台教程/SoFlu前端调测/1. 项目接口与前端在线联调.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu前端调测/1. 项目接口与前端在线联调.md
@@ -16,25 +16,25 @@ a）新增AccessKey管理所有SQL配置在XML文件。
 
 a1）单击在飞算云智的控制台，进入用户控制台页面，如图1-1所示：
 
-![1-1](https://user-images.githubusercontent.com/79617492/168991535-b8b7a928-460f-4216-9ff2-0c4c67caa1d6.png)
+![image](https://user-images.githubusercontent.com/79617492/181440972-c007bc4f-dacf-4294-a371-f26e23ae3fb3.png)
 
 ##### 图1-1 选择控制台
 
 a2）单击用户（主账号）头像下方 “Accesskey管理”，进入"Accesskey管理”页面，如图1-2所示：
 
-![1-2](https://user-images.githubusercontent.com/79617492/168991585-f396dc26-dbfa-45b4-a93c-e0b49cb5986a.png)
+![image](https://user-images.githubusercontent.com/79617492/181440987-9094f513-6b08-44e7-859d-2a44c025bfca.png)
 
 ##### 图1-2 选择Accesskey管理
 
 a3）在"Accesskey管理”页面，单击“创建Accesskey”，如图1-3所示：
 
-![1-3](https://user-images.githubusercontent.com/79617492/168991718-a2cb5a78-c65b-4894-ad66-672c69a7ebab.png)
+![image](https://user-images.githubusercontent.com/79617492/181440997-56bfd19f-8d67-42ae-8e4f-9fc60073b8db.png)
 
 ##### 图1-3 创建Accesskey
 
 a4）系统显示“创建Accesskey”页面，说明创建成功，您可以直接复制AccessKey ID和AccessKey Secret，如图1-4所示：
 
-![1-4](https://user-images.githubusercontent.com/79617492/168991761-1f672d60-618f-44ff-b0bb-44628b47c505.png)
+![image](https://user-images.githubusercontent.com/79617492/181441017-af7673d6-a861-4b62-bf5f-a4ea7bd62031.png)
 
 ##### 图1-4 Accesskey成功
 
@@ -42,7 +42,7 @@ a4）系统显示“创建Accesskey”页面，说明创建成功，您可以直
 
 a5）在"Accesskey管理”页面，创建成功的Accesskey显示在Accesskey管理列表中，如图1-5所示：
 
-![1-5](https://user-images.githubusercontent.com/79617492/168991816-67c39a76-43b2-47a7-ac24-bc5ad6bb7f92.png)
+![image](https://user-images.githubusercontent.com/79617492/181441042-446fc565-7d48-4fd9-b7c4-abe4555be53d.png)
 
 ##### 图1-5 管理Accesskey
 
@@ -66,7 +66,7 @@ b）前端Web与全自动开发平台接口联调。
 https://swg.feisuanyz.com/+项目接口地址? (具体路径请参见：项目管理 > *具体项目* > 接口文档 > 接口地址) +access_key_id=*xxx*&access_key_secret=*xxx*
 ```
 
-![1-6](https://user-images.githubusercontent.com/79617492/168991865-5d70e063-64d9-4710-b02d-66fa0842b685.png)
+![image](https://user-images.githubusercontent.com/79617492/181441075-f30e9099-67cd-4772-8e3b-b35e74de111b.png)
 
 ##### 图1-6 项目接口地址
 
@@ -146,7 +146,7 @@ console.log(err);
 
 ##### 如果您的请求头成功添加了AccessKey Secret值，可以正常请求接口，如图1-7所示：
 
-![1-7](https://user-images.githubusercontent.com/79617492/168991927-f5391407-b206-4282-9427-4dc4b8a1668b.png)
+![image](https://user-images.githubusercontent.com/79617492/181441121-fc8060b3-6f7c-4871-b7d1-f1d9ffae8ed3.png)
 
 ##### 图1-7 成功添加AccessKey Secret值
 
