--- a/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
+++ b/SoFlu（前端）全自动开发平台教程/2. 平台实践/2. 客户意见反馈.md
@@ -200,11 +200,11 @@ b2-3）为操作列-回访绑定：当点击时，跳转至【添加回访记录
 
 ##### 说明：此处传递反馈人联系方式，用于在【添加回访记录页面】同时将反馈人联系方式和回访记录内容添加至回访记录列表。
 
-![输入图片说明](../../images/%20SoFlu%EF%BC%88%E5%89%8D%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E5%B9%B3%E5%8F%B0%E5%AE%9E%E8%B7%B5/2-31.png)
+![image](https://user-images.githubusercontent.com/79617492/182820757-c5f16eca-4676-4627-b55d-edd302ff96ad.png)
 
 ##### 图2-31 为顶部操作查询回访记录绑定1
 
-![输入图片说明](../../images/%20SoFlu%EF%BC%88%E5%89%8D%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E5%B9%B3%E5%8F%B0%E5%AE%9E%E8%B7%B5/2-32.png)
+![image](https://user-images.githubusercontent.com/79617492/182820890-53867b95-1c53-4fa6-902e-6b2b7914b5f6.png)
 
 ##### 图2-32 为顶部操作查询回访记录绑定2
 
