--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/1. 功能概述.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/1. 功能概述.md
@@ -6,6 +6,6 @@
 
 ##### 说明：由于在（前端）全自动开发平台创建应用项目后，（后端）全自动开发平台将自动创建一个同名项目，故在该应用项目下创建的表单和表单数据接口，也将同步显示在（后端）全自动开发平台同名项目的数据库设计和接口管理模块下。
 
-![1-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_0_1.png)
+![image](https://user-images.githubusercontent.com/79617492/183323748-4f85290e-a7b7-46ff-a69a-76396fb71791.png)
 
 ##### 图1-1 具体使用流程
