--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/4. 创建表单.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/4. 创建表单.md
@@ -10,7 +10,7 @@ a）进入表单管理界面，单击“新建模块”创建表单分组。
 
 ##### 说明：若不需进行分组，此步可省略，直接进行下一步。
 
-![4-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_3_1.png)
+![image](https://user-images.githubusercontent.com/79617492/183328054-767002bd-fa11-4684-a1c7-571680609c01.png)
 
 ##### 图4-1 创建表单分组
 
@@ -18,6 +18,6 @@ b）单击上方“新建表单”选项，进入新建表单页面。
 
 c）填写新建表单的基本信息，单击“确定”即创建表单完成。
 
-![4-2](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_3_2.png)
+![image](https://user-images.githubusercontent.com/79617492/183328073-9935299d-cef2-47b6-a43a-769b6df95c85.png)
 
 ##### 图4-2 填写新建表单的基本信息
