--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/8. 生成页面.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/8. 生成页面.md
@@ -12,22 +12,22 @@
 
 a）进入需生成页面的表单设计界面，单击上方“生成页面”选项。
 
-![8-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_7_1.png)
+![image](https://user-images.githubusercontent.com/79617492/183359118-357cb297-69f2-4a9d-a61c-8ec72718d766.png)
 
 ##### 图8-1 单击“生成页面”选项
 
 b）系统弹出生成页面窗口，选择表单数据分组（即当前表单在生成页面后对应表单数据接口存放的位置），再单击“确定”。
 
-![8-2](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_7_2.png)
+![image](https://user-images.githubusercontent.com/79617492/183359141-b086e885-0ec1-4542-9f53-4dbc68deb862.png)
 
 ##### 图8-2 选择表单数据分组
 
 c）系统提示执行成功，您可以看到所在应用项目的页面管理界面下，新增了该表单对应的前端页面，同时指定的表单数据分组下也自动生成了对应的表单数据接口，如下图所示。
 
-![8-3](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_7_3.png)
+![image](https://user-images.githubusercontent.com/79617492/183359167-d3905f35-2138-4c2d-aa89-e266655e7938.png)
 
 ##### 图8-3 所在应用项目的页面管理界面
 
-![8-4](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_7_4.png)
+![image](https://user-images.githubusercontent.com/79617492/183359221-448a3d8b-6e9a-4d1d-9b8b-363a2a828aeb.png)
 
 ##### 图8-4 指定的表单数据分组自动生成对应的表单数据接口
