--- a/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/9. 创建并使用表单数据接口.md
+++ b/SoFlu（前端）全自动开发平台教程/4. 操作指南/1. 表单设计/9. 创建并使用表单数据接口.md
@@ -10,13 +10,13 @@ a）创建表单数据接口
 
 a1）进入表单管理界面，单击上方“表单数据”选项。
 
-![9-1](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_8_1.png)
+![image](https://user-images.githubusercontent.com/79617492/183359599-fd50ad9a-a251-41ed-9bf3-3b7bac85624d.png)
 
 ##### 图9-1 单击“表单数据”选项
 
 a2）进入表单数据管理页面，选择一个分组，单击“新建表单数据”。
 
-![9-2](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_8_2.png)
+![image](https://user-images.githubusercontent.com/79617492/183359619-59d76a69-8c3a-4df0-8574-6878879dcf0f.png)
 
 ##### 图9-2 单击“新建表单数据”
 
@@ -24,7 +24,7 @@ a3）进入新建表单数据页面，填写表单数据接口的基本信息，
 
 ##### 说明：此处的新建表单数据相当于新增一个接口，用于操作已创建表单中的数据。
 
-![9-3](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_8_3.png)
+![image](https://user-images.githubusercontent.com/79617492/183359633-c6265e02-60c7-4cc4-aa00-7c4388bd52bb.png)
 
 ##### 图9-3 填写接口所需参数以及SQL语句
 
@@ -34,6 +34,6 @@ b）使用表单数据接口
 
 用户在进行页面开发、绑定动作操作时，您可以选择所需使用的表单数据接口，如下图所示。
 
-![9-4](https://www.feisuanyz.com/fspage/czzn/tablesj/tablesj_9_1.png)
+![image](https://user-images.githubusercontent.com/79617492/183359649-d5cff2b2-65f0-4c52-aa9f-f95edeb8e83a.png)
 
 ##### 图9-4 选择所需使用的表单数据接口
